2010-02-28 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Write setup.py and build i18n files
     * Progress break feature added (need more testing)
     * Gui freezing problem solved
     * Change ProgressBar as a sub dialog
2010-01-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Fixed #Issue 5
2010-01-13 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Hybrid ISO feature #Issue 3
2009-12-17 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Repo size adding to metadata.xml
     * Calculate estimated ISO size
     * Some gui fix
2009-12-12 Ali Erkan İMREK <alierkanimrek.gmail.com>
     * Package sizes adding to files.xml
2009-11-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * Packager name and email saved conf file
2009-11-22 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * .conf File support and Options dialog added
2009-11-16 Ali Erkan İMREK <alierkanimrek.gmail.com>
	 * Version 0.1 released
2009-10-24 Ali Erkan İMREK <alierkanimrek.gmail.com>
         * First upload