@@ -42,16 +42,16 @@ class config(object):
         config = ConfigParser.SafeConfigParser()
         try:
             config.read([self.__file])
-            self.data[const.OPT_USER_KEY][const.OPT_USERNAME_KEY] = config.get(const.OPT_USER_KEY,const.OPT_USERNAME_KEY)
-            self.data[const.OPT_USER_KEY][const.OPT_USEREMAIL_KEY] = config.get(const.OPT_USER_KEY, const.OPT_USEREMAIL_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_BPASODIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BPASODIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_BALTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BALTDIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_BCDDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BCDDIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_BOUTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_BOUTDIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_PPASODIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PPASODIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_PALTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PALTDIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_PCDDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PCDDIR_KEY)
-            self.data[const.OPT_DIRS_KEY][const.OPT_PROOTDIR_KEY] = config.get(const.OPT_DIRS_KEY, const.OPT_PROOTDIR_KEY)
+            self.data[const.OPT_USER_KEY][const.OPT_USERNAME_KEY] = unicode(config.get(const.OPT_USER_KEY,const.OPT_USERNAME_KEY), "utf-8")
+            self.data[const.OPT_USER_KEY][const.OPT_USEREMAIL_KEY] = unicode(config.get(const.OPT_USER_KEY, const.OPT_USEREMAIL_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_BPASODIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_BPASODIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_BALTDIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_BALTDIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_BCDDIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_BCDDIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_BOUTDIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_BOUTDIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_PPASODIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_PPASODIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_PALTDIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_PALTDIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_PCDDIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_PCDDIR_KEY), "utf-8")
+            self.data[const.OPT_DIRS_KEY][const.OPT_PROOTDIR_KEY] = unicode(config.get(const.OPT_DIRS_KEY, const.OPT_PROOTDIR_KEY), "utf-8")
         except:
             return(False)
         return(True)
